Fiks feltnamn på epost- og smsvarsel for hentEkspederteForsendelser
Dokdistavstemming er einaste konsument, og eg foretrekk namngivinga der, så då endrar eg her.